--- a/01-basics/02-VueCalculator/index.html
+++ b/01-basics/02-VueCalculator/index.html
@@ -28,29 +28,25 @@
   </head>
 
   <body>
-    <div id="app" class="container">
-      <div class="row">
-        <div class="col">
-          <input type="number" />
-        </div>
-
-        <div class="col" style="display: flex; flex-direction: column; font-family: emoji">
-          <label><input type="radio" name="operator" value="sum" /> ➕</label>
-          <label><input type="radio" name="operator" value="subtract" /> ➖</label>
-          <label><input type="radio" name="operator" value="multiply" /> ✖</label>
-          <label><input type="radio" name="operator" value="divide" /> ➗</label>
-        </div>
-
-        <div class="col">
-          <input type="number" />
-        </div>
-
-        <div class="col">=</div>
-
-        <output class="col">0</output>
+  <div id="app" class="container">
+    <div class="row">
+      <div class="col">
+        <input v-model="firstNum" @change="showChange" type="number"/>
       </div>
+      <div class="col" style="display: flex; flex-direction: column; font-family: emoji">
+        <label><input @change="showChange" type="radio" name="operator" value="sum"/> ➕</label>
+        <label><input @change="showChange" type="radio" name="operator" value="subtract"/> ➖</label>
+        <label><input @change="showChange" type="radio" name="operator" value="multiply"/> ✖</label>
+        <label><input @change="showChange" type="radio" name="operator" value="divide"/> ➗</label>
+      </div>
+      <div class="col">
+        <input v-model="secondNum" @change="showChange" type="number"/>
+      </div>
+      <div class="col">=</div>
+      <output class="col">{{sum}}</output>
     </div>
+  </div>
 
-    <script type="module" src="script.js"></script>
+  <script type="module" src="script.js"></script>
   </body>
 </html>
