--- a/01-basics/02-VueCalculator/index.html
+++ b/01-basics/02-VueCalculator/index.html
@@ -31,19 +31,19 @@
   <div id="app" class="container">
     <div class="row">
       <div class="col">
-        <input v-model="firstNum" @change="showChange" type="number"/>
+        <input v-model="firstNum" type="number"/>
       </div>
       <div class="col" style="display: flex; flex-direction: column; font-family: emoji">
-        <label><input @change="showChange" type="radio" name="operator" value="sum"/> ➕</label>
-        <label><input @change="showChange" type="radio" name="operator" value="subtract"/> ➖</label>
-        <label><input @change="showChange" type="radio" name="operator" value="multiply"/> ✖</label>
-        <label><input @change="showChange" type="radio" name="operator" value="divide"/> ➗</label>
+        <label><input v-model="operand" type="radio" name="operator" value="sum"/> ➕</label>
+        <label><input v-model="operand" type="radio" name="operator" value="subtract"/> ➖</label>
+        <label><input v-model="operand" type="radio" name="operator" value="multiply"/> ✖</label>
+        <label><input v-model="operand" type="radio" name="operator" value="divide"/> ➗</label>
       </div>
       <div class="col">
-        <input v-model="secondNum" @change="showChange" type="number"/>
+        <input v-model="secondNum" type="number"/>
       </div>
       <div class="col">=</div>
-      <output class="col">{{sum}}</output>
+      <output class="col">{{ result }}</output>
     </div>
   </div>
 
